--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.0.3",
     "fs": "^0.0.1-security",
     "solc": "^0.8.20",
+    "truffle": "^5.9.3",
     "web3": "^1.10.0"
   }
 }
